# rust-projects

./: README.md
AndroidRust/slint-bottom-nav/: Cargo.toml  README.md  app.slint  build.rs  release-keystore.jks
AndroidRust/slint-bottom-nav/android/: AndroidManifest.xml
AndroidRust/slint-bottom-nav/src/: lib.rs
AndroidRust/slint-top-nav/: Cargo.toml  README.md  build.rs
AndroidRust/slint-top-nav/android/: AndroidManifest.xml
AndroidRust/slint-top-nav/src/: colors.rs  components.rs  lib.rs  main.rs  strings.rs  theme.rs
AndroidRust/slint-top-nav/ui/: main.slint
clockAnalog/: Cargo.toml  README.md
clockAnalog/src/: main.rs
create-dir/: Cargo.toml
create-dir/src/: main.rs
exam_paper_automation/: .env.example  ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_GUIDE.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  schema.sql
exam_paper_automation/examples/: generate_hash.rs
exam_paper_automation/src/: config.rs  main.rs
exam_paper_automation/src/handlers/: admin.rs  auth.rs  mod.rs  user.rs
exam_paper_automation/src/middleware/: auth.rs
exam_paper_automation/src/models/: courses.rs  mod.rs  question_history.rs  questions.rs  users.rs
exam_paper_automation/src/services/: cam.rs  mod.rs  paper_gen.rs  question.rs
exam_paper_automation/src/utils/: auth.rs  email.rs  mod.rs  pdf.rs  validation.rs
removeFromFiles/: Cargo.toml
removeFromFiles/src/: main.rs
renameFiles/renameFiles_Native/: Cargo.toml
renameFiles/renameFiles_Native/src/: main.rs
renameFiles/renameFiles_Walkdir/: Cargo.toml
renameFiles/renameFiles_Walkdir/src/: main.rs
