[package]
name = "exam_paper_automation"
version = "0.1.0"
edition = "2021"
rust-version = "1.93.0"

[dependencies]
# Web Framework - Actix-web (production-ready, minimal footprint)
actix-web = "4.9"
actix-rt = "2.10"
actix-cors = "0.7"

# PostgreSQL ORM - SeaORM (latest, type-safe, async)
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.1"

# Async Runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Security
argon2 = "0.5"  # Password hashing with salt
jsonwebtoken = "9.3"  # JWT tokens
uuid = { version = "1.11", features = ["v4", "serde"] }
rand = "0.8"

# Email for password reset (with vendored openssl to avoid system dependencies)
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "tokio1-native-tls"] }
openssl = { version = "0.10", features = ["vendored"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Environment & Configuration
dotenvy = "0.15"
config = "0.14"

# Validation
validator = { version = "0.19", features = ["derive"] }

# PDF Generation
printpdf = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
